--- a/MvcTest/MvcTest.Web/Index.html
+++ b/MvcTest/MvcTest.Web/Index.html
@@ -7,10 +7,88 @@
     <title>People Manager</title>
 
     <link href="Assets/css/bootstrap.css" rel="stylesheet" />
+    <link href="Content/Style.css" rel="stylesheet" />
 </head>
 <body>
 
+    <div id="app-container">
+        <div id="main-region" class="container">
+            <p>Blank page</p>
+        </div>
+    </div>
 
+    <script type="text/template" id="people-list">
+        <thead>
+            <tr>
+                <th>Name</th>
+                <th>Palindrome</th>
+                <th>Authorised</th>
+                <th>Enabled</th>
+                <th>Colours</th>
+            </tr>
+        </thead>
+        <tbody></tbody>
+    </script>
 
+    <script type="text/template" id="people-list-none">
+        <td>No people to display.</td>
+    </script>
+
+    <script type="text/template" id="people-list-item">
+        <td><a href="#people/<%- id %>"><%- fullName %></a></td>
+        <td><%= isPalindrome %></td>
+        <td><%= isAuthorised %></td>
+        <td><%- coloursString %></td>
+    </script>
+
+    <script type="text/template" id="people-layout">
+        <h1>People</h1>
+        <div id="people-region"></div>
+    </script>
+
+    <script type="text/template" id="missing-person-view">
+        <div class="alert alert-error">This person doesn't exist !</div>
+    </script>
+
+    <script type="text/template" id="person-edit-view">
+        <h1>Update <%- fullName %></h1>
+        <fieldset>
+            <legend>User Details</legend>
+            <div class="form-group">
+                <input type="checkbox" id="is-authorised" name="isAuthorised"<%=isAuthorised===true?'checked':''%>/><label id="is-authorised-label">Authorised</label>
+            </div>
+            <div class="form-group">
+                <input type="checkbox" id="is-enabled" name="isEnabled"<%=isEnabled===true?'checked':''%>/><label id="is-enabled-label">Enabled</label>
+            </div>
+        </fieldset>
+        <fieldset>
+            <legend>Favourite Colours</legend>
+            <div id="colours-region"></div>
+        </fieldset>
+        <button class="btn js-saveChanges">Save changes</button>
+        <button class="btn js-cancel">Cancel</button>
+    </script>
+
+    <script type="text/template" id="loading-view">
+        <div id="spinner"></div>
+    </script>
+
+    <script type="text/template" id="colour-item">
+        <div class="form-group">
+            <input type="checkbox"<%=isChecked===true?'checked':''%>/><%- name %>
+        </div>
+    </script>
+
+    <script src="./assets/js/vendor/jquery.js"></script>
+    <script src="./assets/js/vendor/json2.js"></script>
+    <script src="./assets/js/vendor/underscore.js"></script>
+    <script src="./assets/js/vendor/backbone.js"></script>
+    <script src="./assets/js/vendor/backbone.syphon.js"></script>
+    <script src="./assets/js/vendor/backbone.marionette.js"></script>
+    <script src="./assets/js/vendor/spin.js"></script>
+    <script src="Assets/js/vendor/jquery.spin.js"></script>
+    <script type="text/javascript">
+        PeopleManager.start();
+    </script>
 </body>
 </html>
