--- a/MvcTest/MvcTest.Web/Index.html
+++ b/MvcTest/MvcTest.Web/Index.html
@@ -36,8 +36,9 @@
 
     <script type="text/template" id="people-list-item">
         <td><a href="#people/<%- id %>"><%- fullName %></a></td>
-        <td><%= isPalindrome %></td>
-        <td><%= isAuthorised %></td>
+        <td><%= yesNo(isPalindrome) %></td>
+        <td><%= yesNo(isAuthorised) %></td>
+        <td><%= yesNo(isEnabled) %></td>
         <td><%- coloursString %></td>
     </script>
 
@@ -87,6 +88,15 @@
     <script src="./assets/js/vendor/backbone.marionette.js"></script>
     <script src="./assets/js/vendor/spin.js"></script>
     <script src="Assets/js/vendor/jquery.spin.js"></script>
+
+    <script src="Assets/js/app.js"></script>
+    <script src="Assets/js/entities/person.js"></script>
+    <script src="Assets/js/common/views.js"></script>
+    <script src="Assets/js/apps/people/people-app.js"></script>
+
+    <script src="Assets/js/apps/people/list/list_view.js"></script>
+    <script src="Assets/js/apps/people/list/list_controller.js"></script>
+    <script src="Assets/js/apps/people/list/yesNo.js"></script>
     <script type="text/javascript">
         PeopleManager.start();
     </script>
