--- a/MvcTest/MvcTest.Web/Index.html
+++ b/MvcTest/MvcTest.Web/Index.html
@@ -35,7 +35,7 @@
     </script>
 
     <script type="text/template" id="people-list-item">
-        <td><a href="#people/<%- id %>"><%- fullName %></a></td>
+        <td><a href="#people/edit/<%- id %>"><%- fullName %></a></td>
         <td><%= yesNo(isPalindrome) %></td>
         <td><%= yesNo(isAuthorised) %></td>
         <td><%= yesNo(isEnabled) %></td>
@@ -76,7 +76,7 @@
 
     <script type="text/template" id="colour-item">
         <div class="form-group">
-            <input type="checkbox"<%=isChecked===true?'checked':''%>/><%- name %>
+            <input type="checkbox"<%=isChecked===true?'checked':''%>/> <%- name %>
         </div>
     </script>
 
@@ -90,13 +90,17 @@
     <script src="Assets/js/vendor/jquery.spin.js"></script>
 
     <script src="Assets/js/app.js"></script>
-    <script src="Assets/js/entities/person.js"></script>
+<script src="Assets/js/entities/person.js"></script>
+    <script src="Assets/js/entities/colour.js"></script>
     <script src="Assets/js/common/views.js"></script>
     <script src="Assets/js/apps/people/people-app.js"></script>
 
     <script src="Assets/js/apps/people/list/list_view.js"></script>
     <script src="Assets/js/apps/people/list/list_controller.js"></script>
     <script src="Assets/js/apps/people/list/yesNo.js"></script>
+
+    <script src="Assets/js/apps/people/edit/edit_views.js"></script>
+    <script src="Assets/js/apps/people/edit/edit_controller.js"></script>
     <script type="text/javascript">
         PeopleManager.start();
     </script>
